# libqi-windows

./: .gitignore  LICENSE  README.md  build_all.cmd  build_all.ps1  build_wheel.py  pyproject.toml
patches/libqi/: 0001-Fixes-to-conanfile.py-and-project.json.-conanfile.py.patch  0001-conanfile-Windows-MSVC-compatibility.patch  0002-Add-missing-ostream-include-to-path-hpp.patch  0002-Add-missing-ostream-include-to-path.hpp.patch  0003-CMakeLists-Windows-MSVC-build-support.patch  0003-Fixes-to-CMakeLists.txt-Define-qi_EXPORTS-on-qi_obje.patch  0004-Remove-duplicate-QI_API-in-ssl.hpp.patch  0004-Remove-duplicate-QI_API-on-inline-methods.patch
patches/libqi-python/: 0001-Added-default-option-to-circumvent-gnu-requirement.patch  0001-conanfile-Windows-MSVC-and-local-libqi-support.patch  0001-conanfile-Windows-MSVC-and-local-libqi.patch  0002-Another-attempt-at-circumventing.patch  0002-CMakeLists-local-libqi-and-build-fixes.patch  0002-CMakeLists-use-local-libqi-build-and-fix-Boost.patch  0002-More-gnu-requirement-circumventing.patch  0003-Another-attempt-at-circumventing.patch  0003-Fix-Python-3.13-and-MSVC-compatibility.patch  0003-Point-to-local-build-libqi.patch  0004-Add-install-local-script.patch  0004-Add-install_local.py-helper-script.patch  0004-Point-to-local-build-libqi.patch  0004-Some-updates.patch  0005-Remove-the-qi-requirement.patch  0006-Some-updates.patch  0007-Update-to-conan-file-and-install-local.patch
