[project]
name = "libqi-windows"
version = "4.0.1"
description = "Aldebaran NAOqi (libqi) Python bindings for Windows"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
authors = [
    {name = "Aldebaran / libqi-windows contributors"},
]
keywords = ["naoqi", "nao", "pepper", "aldebaran", "robot", "qi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/SBelgers/libqi-windows"
Repository = "https://github.com/SBelgers/libqi-windows"
"Upstream libqi" = "https://github.com/aldebaran/libqi"
"Upstream libqi-python" = "https://github.com/aldebaran/libqi-python"
